rps.user.css
/* ==UserStyle==
@name        RPS In Pieces
@namespace   Bzly
@version     2.0.1
@homepageURL https://github.com/Bzly/RPS-in-Pieces
@updateURL   https://raw.githubusercontent.com/Bzly/RPS-in-Pieces/main/rps.user.css
@license     GPL-3.0-or-later
@author      Bzly
@preprocessor stylus

@var checkbox darkMode "Dark Mode Enabled" 1
@var checkbox dealsPosts "Deals Posts Enabled" 1
==/UserStyle== */

@-moz-document domain("rockpapershotgun.com") {

/* This CSS _really_ needs a tidy up. Oh well. good_enough.jpg */
    
/* SITEWIDE */
.advert_container {
    display: none !important;
}

.disclaimer, .nav_trending {
    display: none;
}

#content {
    max-width: 80em;
    width: 82%;
}

.excerpt, .article_body_content, #comments .guidelines, .post.live .what {
    text-align:justify;
    hyphens: auto;
    line-height:1.4;
}

.article_body_content aside, .article_body_content .pullquote {
    text-align: left
}

.article_body_content .pullquote {
    margin-top: auto;
    margin-bottom: auto;
}

.article_body_content aside ol li:not(:first-child), .article_body_content aside ul li:not(:first-child) {
    margin-top: 0;
}

.sidebar, .sidebar .gn_sidebar {
    display: none !important;
}

#content_above {
    padding-right: 0 !important;
}

if not dealsPosts {
    li article.summary[data-article-type="deals"] {
        display: none;
    }
}

/* HOMEPAGE */
body[data-page="homepage"] .spotlight .container {
    grid-template-columns: 1fr 3fr;
}

body[data-page="homepage"] .spotlight .container .primary {
    padding-left: 2em;
    border-left: 1px solid #a9a9a9;
    grid-row-gap: 1em;
    order: 2;
}

body[data-page="homepage"] .spotlight .container .primary li:not(:first-of-type) {
    border-bottom: 1px solid #a9a9a933;
    padding-bottom: 1em;
}

body[data-page="homepage"] .spotlight .container .secondary {
    grid-row-gap: 0;
}

body[data-page="homepage"] .spotlight .container .secondary li {
    padding-bottom: 3em;
}

body[data-page="homepage"] .spotlight .container .secondary::before {
    content: "Latest News:";
    font-size: 1.2em;
    font-weight: bold;
    padding-bottom: 1em;
}

body[data-page="homepage"] .view_archive {
    text-align: center;
    margin: 2em;
}

/* /LATEST */
.blog {
    max-width: 75%;
}

body[data-page="blog"] .page_title_wrapper {
    display: none;
}

.blog .link_overlay {
    height: 513px;
}

.blog .articles>li:not(:last-of-type) .excerpt {
    border-bottom: 1px solid #161616;
    padding-bottom: 2em;
}

.blog article .excerpt {
    margin-top: 1em;
}

.blog .summary .excerpt:before {
    margin-bottom: 1em;
}


/* HEADER */
    /* Main header changes */
    header.app_header {
        height: 7em;
    }

    header.app_header > nav.nav_main {
        width: 82%;
        max-width: 80em;
        padding: 0.8em 0;
        grid-template-columns: 16.5em auto 1fr auto;
        max-height: 7em;
    }


    /* Logo */
    .logo {
        background: url('https://raw.githubusercontent.com/Bzly/RPS-in-Pieces/main/logo_new_dark.png') no-repeat;
        background-size: contain;
        height: 5.4em;
    }

    .logo > img {
        visibility: hidden;
    }


    /* Nav */
    .nav_primary a[href="/hardware"], .nav_primary a[href="/videos"], .nav_primary a[href="/guides"], .nav_secondary a[href="/topics/free-games"], .nav_secondary a[href="/deals"], .nav_secondary a[href="/podcasts"], .commercial.button_group {
        display: none;
    }

    .nav_main .commercial.button_group {
        visibility: hidden;
    }


    /* Search and user profile */
    nav.nav_main > .actions {
        grid-template-columns: 1fr auto;
        margin: auto 0;
        grid-column-gap: 2em;
    }

    .nav_main .actions > form.search_box {
        margin: auto;
        width: 15em;
    }

    .nav_main form.logout .button_group {
        display: block;
    }

    .nav_main form.logout .button {
        padding: 0 0.5em;
        border-radius: 0.3em;
    }

    .nav_main .user_profile.signed_in .label, .supporter_thanks {
        display: none;
    }

    .nav_main .actions .user_profile {
        text-align: right
    }

    .nav_main .actions .username {
        display: grid;
    }

    .nav_main form.search_box input {
        color: var(--color);
    }
    
    .app_header .user_profile {
        background: none;
        border: none;
        color: inherit;
    }


/* ARTICLE */
.article_body {
    max-width: 69%;
}

.article_body_content {
    margin: 2em auto;
}

.article_body_content p {
    margin: 1em auto;
}

.article_header {
    max-width: unset;
    padding: 0 3em;
    margin-top: 1em;
    grid-row-gap: 1em;
    grid-template-columns: 1fr auto;
    grid-column-gap: 3em;
}

.details .strapline {
    margin-top: 0.7em;
}

.bb_iawr ~ a.button {
    background: unset;
    padding: unset;
}

.bb_iawr {
    margin: 0 !important;
}


    /* Article footer */
    .article_footer {
        display: grid;
        margin: 0.2em auto;
        max-width: 69%;
        grid-template-columns: 100%
    }

    .article_footer .tagged_with {
        margin: 0;
        text-align: right;
    }

    .article_footer .tagged_with h2 {
        display: none !important;
    }

    .article_footer .tagged_with ul {
        float: right;
        margin: 0;
    }

    .article_footer .tagged_with li:last-of-type a {
        padding-right: 0;
    }
    
    .article_footer .tagged_with ul li a:after {
        content: "" !important;
    }
    
    .article_footer .tagged_with ul li:not(:last-child):after {
        content: "/" !important;
        padding: 0em 0.25em;
        color: #3d434a;
    }

    .article_footer .author_bio .section_title {
        margin: 1em 0 1em;
    }

    .article_footer .author_bio .name {
        margin: 0;
    }

    .article_footer #comments .section_title {
        margin: 1em 0 0.6em;
    }

    .article_footer .author_bio {
        margin-bottom: 1em;
    }

    #comments .guidelines, #comments .container {
        margin-bottom: 1em;
    }

    #content_below {
        display: none;
    }

    .thread {
        max-width: 100%;
        width: unset;
    }

    .article_footer .supporters_promo h3, .article_footer .supporters_promo p {
        display: none;
    }
    
    .article_footer .supporters_promo {
        background: none;
        padding: 0;
        margin: 0 auto;
    }
    
    .article_footer .supporters_promo .button {
        font-size: 0;
        background-color: #44208d80;
        padding: 0.5rem 3rem;
    }

    .article_footer .supporters_promo .button::after {
        font-size: 0.825rem;
        color: #ddd;
        content: "Support RPS"
    }
    
    /* Comments */
    #comments .container .alert {
        margin: 0 auto;
        color: #a9a9a9;
    }

    #comments .container .metadata {
        grid-template-columns: auto 1fr auto;
    }

    #comments .username .scrim, #comments .container .post .when {
        color: #555;
    }

    #comments .container .editing, #comments .container .inline_reply_form, #comments .container .what {
        margin-top: 0.7em;
    }

    #comments .container .post {
        margin-top: 1.2em;
    }

    #comments .container .button_group {
        margin-top: 0.5em;
    }

    #comments .button_group .button {
        border-radius: 0.3em;
        font-size: 0.8rem;
        padding: 0.3em 0.6em;
    }

    #comments .button_group.tabbed .button {
        font-size: 0.8rem;
        padding: 0.3em 0.6em;
    }

    #comments .button_group.tabbed .button:not(:first-of-type) {
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
    }

    #comments .button_group.tabbed .button:first-of-type {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }

    #comments .post button.toggle {
        width: 1em;
        height: 1em;
        left: -1.5em;
    }

    #comments .post button.toggle::after {
        content: "–";
        top:-0.2em;
        left:-0.05em;
    }
    
    #comments textarea {
        height: 9em;
    }

/* SITE FOOTER */
.app_footer, .nav_wrapper {
    height: unset;
}

.app_footer .nav_wrapper {
    width: 82% !important;
    max-width: 80em !important;
    padding: 1em 1em;
    grid-template-columns: 1fr 1fr 1fr auto !important;
    grid-column-gap:5em !important;
}
.app_footer .nav_wrapper ul > li > a, .app_footer .nav_wrapper ul > li > button {
    padding: 0.1em !important;
}

.app_footer .nav_sites, .app_footer .nav_events, .app_footer .about p {
    display: none;
}

.app_footer .nav_helpful ul {
    grid-template-columns: auto auto;
    grid-column-gap: 2em;
}

.app_footer .about {
    grid-row-gap: 0;
}

.app_footer .about .logo {
    margin-bottom: 0.8em;
}

.social_list {
    transform: unset;
    display: grid;
    grid-template-columns: repeat(7,auto);
}

if darkMode {
/* DARK MODE */
body:not(.docked) {
    color: #a9a9a9;
    background: #161616 url('https://raw.githubusercontent.com/Bzly/RPS-in-Pieces/main/noise.png') repeat !important;
}

#content, .app_header, .app_footer {
    background: #212121 url('https://raw.githubusercontent.com/Bzly/RPS-in-Pieces/main/noise.png') repeat !important;
    border-color: #161616;
}

:root, #comments .container .post[data-user-type=supporter] {
    --color: #00866B
}

.app_header .username .flair.supporter {
    --color: #9976E0;
}

.app_header .nav_secondary a, .app_header .nav_primary a, .app_footer nav:not(.social_follow) a, .app_footer nav:not(.social_follow) button {
    color: #a9a9a9;
}

.app_header .button, .article_header .supporter_message {
    color: var(--color) !important;
    border-color: var(--color) !important;
}

.article[data-premium=true], .summary[data-premium=true] {
    --color: #9976E0;
    --strap-color: #9976E0;
}

.article_header .title, .summary .name, .summary .title, .page_title {
    color: #bbb;
}

#content textarea {
    background: #3d3d3d url('https://raw.githubusercontent.com/Bzly/RPS-in-Pieces/main/noise.png') repeat;
    color: #a9a9a9;
}

article:not([data-article-type="features"]):not([data-article-type="reviews"]) .strapline {
    color: #a9a9a9;
}
    
.article_body_content tr:nth-of-type(odd) {
    background: #272727 !important;
}
    
.article_body_content tr:nth-of-type(even) {
    background: #333333 !important;
}
    
.article[data-paywalled="true"] .article_body_content::after {
    background-image: linear-gradient(180deg,transparent,#212121);
}
    
.article_body_content figure figcaption {
    color: #a9a9a9aa;
    border-color: #555;
}
    
.article_body_content blockquote:not(.twitter-tweet):not(.pullquote) {
    background: #161616 url('https://raw.githubusercontent.com/Bzly/RPS-in-Pieces/main/noise.png') repeat;
}
}
}

